# tcc-dev

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.py  notes_tcc  plot.py  tflmicro.cmake
.cache/clangd/index/: activation_utils.h.3C68EE459C8AA499.idx  activations.cpp.E516B0852896FA01.idx  add.cpp.5D9E9AFF357B8364.idx  add.h.4D68B7BAD5F3897C.idx  add.h.5D9E000B75575D6F.idx  address_mapped.h.2CAE17236CB6FCCF.idx  addressmap.h.8539902790BB2CB0.idx  all_ops_resolver.cpp.D526CD72EBD13A3C.idx  all_ops_resolver.h.8BD2E4C1AC41F18C.idx  arg_min_max.cpp.7FC9714629F3EBEB.idx  arg_min_max.h.332CE1ACA41D1580.idx  arm_avgpool_s8.c.A7D38321F9B26B8E.idx  arm_common_tables.h.EBBD645E0FED84E7.idx  arm_concatenation_s8_w.c.D5A8CEEB182049E2.idx  arm_concatenation_s8_x.c.D394DF3528418802.idx  arm_concatenation_s8_y.c.315EECF2980D0A9B.idx  arm_concatenation_s8_z.c.AAD36EE6DBC87B92.idx  arm_convolve_1_x_n_s8.c.A9B286C1576803F8.idx  arm_convolve_1x1_HWC_q7_fast_nonsquare.c.6D844FEE99321B6D.idx  arm_convolve_1x1_s8_fast.c.962D2A596661C1D9.idx  arm_convolve_HWC_q15_basic.c.958AF13DC4412C8E.idx  arm_convolve_HWC_q15_fast.c.EE1E3FA937E92579.idx  arm_convolve_HWC_q15_fast_nonsquare.c.40E906683F18404E.idx  arm_convolve_HWC_q7_RGB.c.4CEF8F9E0D8088EE.idx  arm_convolve_HWC_q7_basic.c.A0014E2724161023.idx  arm_convolve_HWC_q7_basic_nonsquare.c.D32A61763178A845.idx  arm_convolve_HWC_q7_fast.c.A7884A9B52D2DD4E.idx  arm_convolve_HWC_q7_fast_nonsquare.c.5D7CD37F7E9EDD0D.idx  arm_convolve_s8.c.BEDF8D0BE5287C33.idx  arm_convolve_wrapper_s8.c.B3B64E3A0ADCFFDE.idx  arm_depthwise_conv_3x3_s8.c.52F61255C374C5F8.idx  arm_depthwise_conv_s8.c.20E5C447194DAA22.idx  arm_depthwise_conv_s8_opt.c.84F4BF995F2C678B.idx  arm_depthwise_conv_u8_basic_ver1.c.2D48BE5D21651CC5.idx  arm_depthwise_conv_wrapper_s8.c.4472596178EC5C78.idx  arm_depthwise_separable_conv_HWC_q7.c.C00A73C387451A5A.idx  arm_depthwise_separable_conv_HWC_q7_nonsquare.c.7F01993B0D9ABB28.idx  arm_elementwise_add_s8.c.2AE5B7D145FCCE60.idx  arm_elementwise_mul_s8.c.16DFB578E025A8EE.idx  arm_fully_connected_mat_q7_vec_q15.c.965FED8D8797AC4E.idx  (+426 more)
apps/: CMakeLists.txt
apps/hello_AI/: CMakeLists.txt  main.cpp
apps/hello_AI/include/: model.h
apps/hello_AI/src/: CMakeLists.txt  model.cpp  output_handler.cpp
apps/hello_ble/: CMakeLists.txt  gatt_ht_server.c  gatt_ht_server.h  main.cpp
apps/hello_ble/include/: gatt_ht_server.gatt  gatt_ht_server.h  server_functions.h
apps/hello_ble/src/: CMakeLists.txt  log.cpp  server_functions.cpp
apps/hello_freertos/: CMakeLists.txt  main.cpp
apps/hello_freertos/include/: config.h
apps/hello_freertos/src/: CMakeLists.txt  log.cpp
apps/hello_lp/: CMakeLists.txt  main.cpp
apps/hello_lp/include/: config.h  logger.h
apps/hello_lp/src/: CMakeLists.txt  logger.cpp
apps/hello_mpu/: main.cpp
apps/hello_mpu FORBIDDEN CODE/: CMakeLists.txt
apps/hello_mpu FORBIDDEN CODE/include/: log.h  mpu6050.h
apps/hello_mpu FORBIDDEN CODE/src/: CMakeLists.txt  mpu6050.cpp
apps/hello_name/: CMakeLists.txt  main.cpp
apps/hello_name/include/: config.h
apps/hello_name/src/: CMakeLists.txt  log.cpp
apps/hello_sin/: CMakeLists.txt  main.cpp
apps/hello_sin/src/: CMakeLists.txt
apps/tcc_baseline/: CMakeLists.txt  main.cpp
apps/tcc_baseline/include/: data_54.h  log.h  logger.h  physical_activity_monitor.h  server_functions.h
apps/tcc_baseline/src/: CMakeLists.txt  server_functions.cpp
apps/tcc_beacon/: CMakeLists.txt  main.cpp
apps/tcc_beacon/include/: data_432.h  model2.h  point.h  server_functions.h
apps/tcc_beacon/src/: CMakeLists.txt  server_functions.cpp
apps/tcc_beacon/src/models/: CMakeLists.txt  lw16_md1.cc  lw16_md8.cc
apps/tcc_ble/: CMakeLists.txt  main.cpp
apps/tcc_ble/include/: gatt_ht_server.gatt  physical_activity_monitor.gatt  server_functions.h
apps/tcc_ble/src/: CMakeLists.txt  log.cpp  server_functions.cpp
apps/tcc_final/: CMakeLists.txt  main.cpp
apps/tcc_final/include/: feature_extraction.h  model2.h  server_functions.h
apps/tcc_final/src/: CMakeLists.txt  server_functions.cpp
apps/tcc_final/src/data/: CMakeLists.txt
apps/tcc_final/src/models/: CMakeLists.txt  lw16_md4.cc  lw32_md4.cc  lw4_md2.cc  lw8_md2.cc
apps/tcc_only_features/: CMakeLists.txt  main.cpp
apps/tcc_only_features/include/: data_108.h  data_216.h  feature_extraction.h  server_functions.h
apps/tcc_only_features/src/: CMakeLists.txt
apps/tcc_only_features/src/models/: CMakeLists.txt  lw16_md2.cc  lw32_md8.cc  lw4_md1.cc  lw64_md1.cc  lw64_md2.cc  lw8_md1.cc
apps/tcc_only_model/: CMakeLists.txt  main.cpp
apps/tcc_only_model/src/: CMakeLists.txt  logger.cpp  server_functions.cpp
apps/tcc_only_model/src/models/: CMakeLists.txt  CMakeLists.txt.bkp  lw32_md1.cc  lw32_md2.cc  lw4_md4.cc  lw4_md8.cc  lw64_md4.cc  lw64_md8.cc  lw8_md4.cc  lw8_md8.cc
cmake/: ble.cmake  freertos.cmake  tflmicro.cmake
hello_world/: CMakeLists.txt
python/: compare_cycles.py  compare_dw.py  compare_intervals.py  compare_models.py  compare_tasks.py  cycle_plot.py  data.py  modeling.py  only_model.py  plot.py  plot_beacon5s.py  plot_feats.py  plot_lp.py  sim.py  utils.py
python/dev_env/: annot_data_analysis  compile.py  data_analysis.py  power_consumption_modeling  sim.py  test.py  test2.py
src/: CMakeLists.txt
